redraw on .end() properly